[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/screens/training_screen.gd" id="1"]
[ext_resource type="Theme" path="res://ui/theme/game_theme.tres" id="2"]

[node name="TrainingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.035, 0.035, 0.043, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeaderBar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
text = "< Back"

[node name="HeaderSpacer" type="Control" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.024, 0.714, 0.831, 1)
theme_override_font_sizes/font_size = 24
text = "Training"
horizontal_alignment = 1

[node name="HeaderSpacer2" type="Control" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TPLabel" type="Label" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "TP: 0"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="DigimonHeader" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="SpriteRect" type="TextureRect" parent="MarginContainer/VBox/DigimonHeader"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
expand_mode = 1
stretch_mode = 5

[node name="DigimonInfoVBox" type="VBoxContainer" parent="MarginContainer/VBox/DigimonHeader"]
layout_mode = 2

[node name="DigimonNameLabel" type="Label" parent="MarginContainer/VBox/DigimonHeader/DigimonInfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Digimon"

[node name="DigimonLevelLabel" type="Label" parent="MarginContainer/VBox/DigimonHeader/DigimonInfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.443, 0.443, 0.478, 1)
theme_override_font_sizes/font_size = 14
text = "Lv. 1"

[node name="TypeSelectCenter" type="CenterContainer" parent="MarginContainer/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="TypeSelectVBox" type="VBoxContainer" parent="MarginContainer/VBox/TypeSelectCenter"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="StandardButton" type="Button" parent="MarginContainer/VBox/TypeSelectCenter/TypeSelectVBox"]
layout_mode = 2
custom_minimum_size = Vector2(260, 60)
text = "Standard Training"

[node name="HyperButton" type="Button" parent="MarginContainer/VBox/TypeSelectCenter/TypeSelectVBox"]
layout_mode = 2
custom_minimum_size = Vector2(260, 60)
text = "Hyper Training"

[node name="TabRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StandardTab" type="Button" parent="MarginContainer/VBox/TabRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 36)
toggle_mode = true
button_pressed = true
text = "Standard Training"

[node name="HyperTab" type="Button" parent="MarginContainer/VBox/TabRow"]
layout_mode = 2
custom_minimum_size = Vector2(180, 36)
toggle_mode = true
text = "Hyper Training"

[node name="Spacer2" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 4)

[node name="TotalTVLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.443, 0.443, 0.478, 1)
theme_override_font_sizes/font_size = 14
text = "Total TVs: 0 / 1000"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatRows" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="AnimationOverlay" type="PanelContainer" parent="MarginContainer/VBox"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="AnimationVBox" type="VBoxContainer" parent="MarginContainer/VBox/AnimationOverlay"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="StepLabel1" type="Label" parent="MarginContainer/VBox/AnimationOverlay/AnimationVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
text = "Step 1: ..."

[node name="StepLabel2" type="Label" parent="MarginContainer/VBox/AnimationOverlay/AnimationVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
text = "Step 2: ..."

[node name="StepLabel3" type="Label" parent="MarginContainer/VBox/AnimationOverlay/AnimationVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
text = "Step 3: ..."

[node name="ResultLabel" type="Label" parent="MarginContainer/VBox/AnimationOverlay/AnimationVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.024, 0.714, 0.831, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
text = ""

[node name="DoneButton" type="Button" parent="MarginContainer/VBox/AnimationOverlay/AnimationVBox"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(120, 36)
size_flags_horizontal = 4
text = "Done!"
